# lib/api-spec/openapi.yaml
@@ -341,6 +341,9 @@ components:
         seriesOrder:
           type: integer
           nullable: true
+        pages:
+          type: integer
+          nullable: true
         finishedAt:
           type: string
           format: date-time
@@ -376,6 +379,9 @@ components:
           type: integer
           nullable: true
         seriesOrder:
+          type: integer
+          nullable: true
+        pages:
           type: integer
           nullable: true
         finishedAt:
